# Project3_Lima_Wally

./: EMCEE.py  HandWritten.py  Initial.py  README.md  gendata.py  generated_data_sp.txt  mcmc_module.py  pyproject.toml
PackageMCMC/: pyproject.toml  setup.py
PackageMCMC/src/MCMC_LW/: HandWritten.py  gendata.py
project/: main.py
