[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MCMC"
version = "0.0.1"
authors = [
  { name="aklima_wally", email="aklima@example.com" },
]
description = "Package for Project 3"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/WallyBorden/Project3_Lima_Wally"
